--- a/css/style-index.css
+++ b/css/style-index.css
@@ -132,7 +132,7 @@ a {
 }
 
 .repo{
-    margin: auto;
+    margin: 40px auto;
     border-radius: 10px;
     padding: 10px;
     text-align: center;
